base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for application's https service.
  labels:
    application: myeap
  name: myeap
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: myeap-blue-loadbalancer
    weight: 100
  alternateBackends:
    - kind: Service
      name: myeap-green-loadbalancer
      weight: 0
